[gd_scene load_steps=7 format=3 uid="uid://14aejxorpjam"]

[ext_resource type="Texture2D" uid="uid://0t4w1jwq4urq" path="res://assets/Tileset/Trapdoors/SkeletonPermPressurePlate1.png" id="1_fgy87"]
[ext_resource type="Script" uid="uid://rot2gi3lq5i5" path="res://scenes/world/Objects/skeleton_perm_pressure_plate.gd" id="1_xgl2m"]
[ext_resource type="Texture2D" uid="uid://bsocmokyk17co" path="res://assets/Tileset/Trapdoors/SkeletonPermPressurePlate2.png" id="2_xl4b2"]
[ext_resource type="AudioStream" uid="uid://8w750f526cwq" path="res://sound/effects/pressureplate.wav" id="4_mbfbp"]
[ext_resource type="Script" uid="uid://cfmu3vlnm31dm" path="res://scripts/components/variable_pitch_audio_stream_player.gd" id="5_s31ov"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xl4b2"]
size = Vector2(16, 15)

[node name="SkeletonPermPressurePlate" type="Node2D"]
script = ExtResource("1_xgl2m")

[node name="Normal" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = ExtResource("1_fgy87")
centered = false

[node name="Pressed" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = ExtResource("2_xl4b2")
centered = false

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, 7.5)
shape = SubResource("RectangleShape2D_xl4b2")

[node name="VariablePitchAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_mbfbp")
script = ExtResource("5_s31ov")
metadata/_custom_type_script = "uid://cfmu3vlnm31dm"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
